--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,5 +1,10 @@
 assets:
   rubygems.yml: zerocracy/home#assets/rubygems.yml
+install:
+  script: |-
+    sudo gem install hoc
+    sudo apt-get install -y cloc
+    sudo apt-get install -y gnuplot
 release:
   script: |-
     sudo bundle install
