--- a/.rultor.yml
+++ b/.rultor.yml
@@ -2,6 +2,7 @@ assets:
   rubygems.yml: zerocracy/home#assets/rubygems.yml
 install: |-
   sudo gem install hoc
+  sudo apt-get update -y
   sudo apt-get install -y cloc
   sudo apt-get install -y gnuplot
 release:
