--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ branches:
   only:
     - master
 install:
-  - travis_retry bundle update
+  - travis_retry sudo apt-get update
+  - travis_retry sudo apt-get remove -y git
+  - travis_retry sudo add-apt-repository "deb http://ppa.launchpad.net/svn/ppa/ubuntu precise main"
+  - travis_retry sudo add-apt-repository -y ppa:git-core/ppa
+  - travis_retry sudo apt-get update
+  - travis_retry sudo apt-get install -y git
+  - travis_retry bundle install
+  - git --version
 script:
   - rake
 
