--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - travis_retry sudo add-apt-repository -y ppa:git-core/ppa
   - travis_retry sudo apt-get update
   - travis_retry sudo apt-get install -y git
+  - travis_retry sudo apt-get install -y gnuplot
   - travis_retry bundle install
   - git --version
 script:
