--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,5 +1,5 @@
 assets:
-  rubygems.yml: zerocracy/home#assets/rubygems.yml
+  rubygems.yml: yegor256/home#assets/rubygems.yml
 install: |-
   sudo gem install hoc
   sudo apt-get update -y
